--- a/ACTAPP_Console_Engine_TestConsole/ACTAPP_Console_Engine_TestConsole.csproj
+++ b/ACTAPP_Console_Engine_TestConsole/ACTAPP_Console_Engine_TestConsole.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,5 +6,22 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="C:\Users\MarkAlicz\.nuget\packages\act_core\2.1.5.4\contentFiles\any\net6.0\Assets\Icon.ico" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <PackageReference Include="ACT_CORE" Version="2.1.5.4" />
+    <PackageReference Include="ACT_Enums" Version="2.1.5.9" />
+    <PackageReference Include="ACT_Extension_Library" Version="2.1.8.2" />
+    <PackageReference Include="ACT_Interfaces" Version="2.1.9" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="Resources\Assets\" />
+  </ItemGroup>
 
 </Project>
