--- a/ACTAPP_ConsoleEngine/Resources/Settings.ini
+++ b/ACTAPP_ConsoleEngine/Resources/Settings.ini
@@ -3,13 +3,13 @@ additionalsensitivekeywords=password|pass|credit|connection|pw|email
 autodownloadupdates=true
 autodownloadupdateslocation=""
 autosavesystemconfigurationchanges=false
-basedirectory="##APPDOMAIN##\Resources\"
+basedirectory="##APPDOMAIN##"
 enableautoencryptsensitivesettings=true
 encryptconfigfile=true
 encryptionkeysource=0
 implementautoclasschangemonitor=false
-inifiletouse="#basedirectory#\Resources\ssssssssssss"
-installpath="c:\ACT\installations\"
+inifiletouse="#basedirectory#\Resources\"
+installpath="C:\ACT\ProgramFiles\ConsoleEngine\"
 keepplaintextconfigfile=false
 maintimerinterval=5000
 name=BaseINIFile
@@ -17,29 +17,29 @@ verboselogging=true
 
 
 [systemconfiguration]
-primarysystemconfig="c:\act\installations\Resources\"
+primarysystemconfig="#inifiletouse#"
 loadonlyapplocationconfigfile=true,
 loadallconfigurationfiles=false,
 inheritanceorder=""
 inheritancemode=0
 
 [variablenames]
-CriticalErrorPath="##INSTALLPATH##\LOGS\Critical\"
-FatalErrorPath="##INSTALLPATH##\LOGS\Fatal\"
-InformationalPath="##INSTALLPATH##\LOGS\Info\"
-SecurityErrorPath="##INSTALLPATH##\LOGS\Security\"
+CriticalErrorPath="#basedirectory#\LOGS\Critical\"
+FatalErrorPath="#basedirectory#\LOGS\Fatal\"
+InformationalPath="#basedirectory#\LOGS\Info\"
+SecurityErrorPath="#basedirectory#\LOGS\Security\"
 
 [directoryreplacements]
-AssetsDirectory=""
+AssetsDirectory="#basedirectory#\assets\"
 CheatSheetsDirectory=""
-DatabaseConnectionFiles=""
-IconsDirectory=""
-LicenceFilePath=""
-LogsDirectory=""
-ResourcesDirectory=""
-SystemConfigurationFiles=""
-TempCompressionFilePat=""
-TempFilePath=""
+DatabaseConnectionFiles="#basedirectory#\Resources\DBConnections\"
+IconsDirectory="#basedirectory#\Resources\Assets\"
+LicenceFilePath="#basedirectory#\Resources\License\"
+LogsDirectory="#basedirectory#\Resources\LOGS\"
+ResourcesDirectory="#basedirectory#\Resources\"
+SystemConfigurationFiles="#basedirectory#\Resources\"
+TempCompressionFilePat="#basedirectory#\Resources\Temp\"
+TempFilePath="#basedirectory#\Resources\Temp\"
 
 [nlogtargets]
 Target_A_FileName="${CriticalErrorPath}/criticallog_${shortdate}.log"
