--- a/ACTAPP_ConsoleEngine/ACTAPP_ConsoleEngine.csproj
+++ b/ACTAPP_ConsoleEngine/ACTAPP_ConsoleEngine.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
@@ -9,7 +9,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageId>ACT_Applications_ConsoleEngine</PackageId>
     <Title>Console Engine - Design Menus, Provides Console Functions</Title>
-    <Version>2.0.1</Version>
+    <Version>2.3.3.1</Version>
     <Authors>Mark Alicz</Authors>
     <Company>IVolt, llc</Company>
     <Product>ACT Application ConsoleEngine</Product>
@@ -17,6 +17,7 @@
     <Copyright>1998-2022 Mark Alicz</Copyright>
     <PackageProjectUrl>https://www.act-net.us/Applications/ConsoleEngine/</PackageProjectUrl>
     <PackageOutputPath>D:\IVolt_Releases\_APPLICATIONS\ACTAPP_ConsoleEngine</PackageOutputPath>
+    <StartupObject>ACT.Applications.ConsoleEngine.ACT_Console_Entry</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,9 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ACT_Enums" Version="2.3.1" />
-    <PackageReference Include="ACT_Extension_Library" Version="2.3.1.1" />
-    <PackageReference Include="ACT_Interfaces" Version="2.3.1" />
+    <PackageReference Include="ACT_Enums" Version="2.3.2.2" />
+    <PackageReference Include="ACT_Interfaces" Version="2.3.2.1" />
   </ItemGroup>
 
   <ItemGroup>
