--- a/ACTAPP_Console_Engine_TestConsole/ACTAPP_Console_Engine_TestConsole.csproj
+++ b/ACTAPP_Console_Engine_TestConsole/ACTAPP_Console_Engine_TestConsole.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>2.3.3.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,9 +14,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="ACT_Enums" Version="2.3.1" />
-    <PackageReference Include="ACT_Extension_Library" Version="2.3.1.1" />
-    <PackageReference Include="ACT_Interfaces" Version="2.3.1" />
+    <PackageReference Include="ACT_Enums" Version="2.3.2.2" />
+    <PackageReference Include="ACT_Interfaces" Version="2.3.2.1" />
   </ItemGroup>
 
 
